--- a/po/stellarium-skycultures/nb.po
+++ b/po/stellarium-skycultures/nb.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2013-01-06 20:31+0000\n"
+"PO-Revision-Date: 2013-01-07 13:54+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-07 04:42+0000\n"
+"X-Launchpad-Export-Date: 2013-01-08 04:51+0000\n"
 "X-Generator: Launchpad (build 16402)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
@@ -166,7 +166,7 @@ msgstr "Herkuleshopen"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr "Andromeda-galaksen"
+msgstr "Andromedagalaksen"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
@@ -489,7 +489,7 @@ msgstr "Spiralplanetarisk-tåke"
 
 #: nebulae/default/ngc2000names.dat:252
 msgid "20 Vulpeculae cluster"
-msgstr ""
+msgstr "20 Vul-hopen"
 
 #: nebulae/default/ngc2000names.dat:253
 msgid "Ambartsumian's Knot"
@@ -525,7 +525,7 @@ msgstr "Kjøletårn"
 
 #: nebulae/default/ngc2000names.dat:261
 msgid "Crowbar galaxy"
-msgstr ""
+msgstr "Brekkjern-galaksen"
 
 #: nebulae/default/ngc2000names.dat:262
 msgid "Sagittarius Star Cloud"
