--- a/po/stellarium/af.po
+++ b/po/stellarium/af.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-06 01:47+0700\n"
-"PO-Revision-Date: 2012-09-03 08:59+0000\n"
-"Last-Translator: Dawid de Jager <dawid.dejager@gmail.com>\n"
+"PO-Revision-Date: 2013-01-07 10:27+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Afrikaans <af@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-06 04:31+0000\n"
-"X-Generator: Launchpad (build 16393)\n"
+"X-Launchpad-Export-Date: 2013-01-08 04:50+0000\n"
+"X-Generator: Launchpad (build 16402)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -203,7 +203,7 @@ msgstr ""
 #: src/core/modules/StarWrapper.cpp:52 src/core/modules/StarWrapper.cpp:122
 #: src/translations.h:151
 msgid "star"
-msgstr ""
+msgstr "ster"
 
 #: src/core/modules/StarWrapper.cpp:57
 #, qt-format
@@ -396,7 +396,7 @@ msgstr "Az/Alt: %1/%2"
 
 #: src/core/SimbadSearcher.cpp:55
 msgid "Network error"
-msgstr ""
+msgstr "Netwerkfout"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
@@ -408,11 +408,11 @@ msgstr ""
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "Fout"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
-msgstr ""
+msgstr "Nie gevind nie"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Found"
@@ -1239,7 +1239,7 @@ msgstr "W"
 #. TRANSLATORS: Type of object
 #: src/translations.h:153
 msgid "planet"
-msgstr ""
+msgstr "planeet"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:155
@@ -1375,7 +1375,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:216
 msgid "Zodiac"
-msgstr ""
+msgstr "Zodiac"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:218
