--- a/po/stellarium/ast.po
+++ b/po/stellarium/ast.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-06 01:47+0700\n"
-"PO-Revision-Date: 2012-02-22 20:10+0000\n"
+"PO-Revision-Date: 2013-01-07 10:15+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Asturian <ast@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-06 04:32+0000\n"
-"X-Generator: Launchpad (build 16393)\n"
+"X-Launchpad-Export-Date: 2013-01-08 04:50+0000\n"
+"X-Generator: Launchpad (build 16402)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1236,17 +1236,17 @@ msgstr "W"
 #. TRANSLATORS: Type of object
 #: src/translations.h:153
 msgid "planet"
-msgstr ""
+msgstr "planeta"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:155
 msgid "comet"
-msgstr ""
+msgstr "cometa"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:157
 msgid "asteroid"
-msgstr ""
+msgstr "asteroide"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:159
@@ -1260,7 +1260,7 @@ msgstr ""
 
 #: src/translations.h:165
 msgid "Arabic"
-msgstr ""
+msgstr "Árabe"
 
 #: src/translations.h:166
 msgid "Aztec"
@@ -1357,7 +1357,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:210
 msgid "Screensaver"
-msgstr ""
+msgstr "Salvapantallas"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:212
@@ -1372,7 +1372,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:216
 msgid "Zodiac"
-msgstr ""
+msgstr "Zodiacu"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:218
