--- a/po/stellarium/pt_BR.po
+++ b/po/stellarium/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-06 01:47+0700\n"
-"PO-Revision-Date: 2013-01-07 02:01+0000\n"
+"PO-Revision-Date: 2013-01-07 11:32+0000\n"
 "Last-Translator: Adriano Steffler <Unknown>\n"
 "Language-Team: Portuguese (Brazil) <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-07 04:41+0000\n"
+"X-Launchpad-Export-Date: 2013-01-08 04:51+0000\n"
 "X-Generator: Launchpad (build 16402)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -112,11 +112,11 @@ msgstr "aglomerado associado a nebulosidade"
 
 #: src/core/modules/Nebula.cpp:360
 msgid "Unknown"
-msgstr "Desconhecido"
+msgstr "desconhecido"
 
 #: src/core/modules/Nebula.cpp:363
 msgid "Undocumented type"
-msgstr "Tipo não documentado"
+msgstr "tipo não documentado"
 
 #: src/core/modules/Planet.cpp:450 src/core/modules/MinorPlanet.cpp:218
 #: src/core/modules/MinorPlanet.cpp:222 src/core/modules/Comet.cpp:137
