--- a/po/stellarium/sq.po
+++ b/po/stellarium/sq.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium 0.10.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-06 01:47+0700\n"
-"PO-Revision-Date: 2012-12-19 18:06+0000\n"
-"Last-Translator: Sofokli Varelas <Unknown>\n"
+"PO-Revision-Date: 2013-01-07 10:24+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Albanian <gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-06 04:31+0000\n"
-"X-Generator: Launchpad (build 16393)\n"
+"X-Launchpad-Export-Date: 2013-01-08 04:50+0000\n"
+"X-Generator: Launchpad (build 16402)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1239,17 +1239,17 @@ msgstr "P"
 #. TRANSLATORS: Type of object
 #: src/translations.h:153
 msgid "planet"
-msgstr ""
+msgstr "planet"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:155
 msgid "comet"
-msgstr ""
+msgstr "kometë"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:157
 msgid "asteroid"
-msgstr ""
+msgstr "asteroid"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:159
@@ -1330,12 +1330,12 @@ msgstr ""
 #. TRANSLATORS: Landscape name: Hurricane Ridge
 #: src/translations.h:190
 msgid "Hurricane"
-msgstr ""
+msgstr "Uragan"
 
 #. TRANSLATORS: Name of landscape
 #: src/translations.h:192
 msgid "Ocean"
-msgstr ""
+msgstr "Ocean"
 
 #. TRANSLATORS: Landscape name: Garching bei Munchen
 #: src/translations.h:194
@@ -1360,7 +1360,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:210
 msgid "Screensaver"
-msgstr ""
+msgstr "Ruajtës ekrani"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:212
@@ -1375,7 +1375,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:216
 msgid "Zodiac"
-msgstr ""
+msgstr "Zodiak"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:218
