--- a/po/stellarium/te.po
+++ b/po/stellarium/te.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-06 01:47+0700\n"
-"PO-Revision-Date: 2011-01-06 10:26+0000\n"
-"Last-Translator: Jagan Challa <Unknown>\n"
+"PO-Revision-Date: 2013-01-07 10:37+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Telugu <te@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-06 04:41+0000\n"
-"X-Generator: Launchpad (build 16393)\n"
+"X-Launchpad-Export-Date: 2013-01-08 04:51+0000\n"
+"X-Generator: Launchpad (build 16402)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
-msgstr ""
+msgstr "మేరీడియన్"
 
 #: src/core/modules/GridLinesMgr.cpp:568 src/ui_viewDialog.h:1176
 msgid "Ecliptic"
