--- a/po/stellarium/az.po
+++ b/po/stellarium/az.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-09 18:40+0700\n"
-"PO-Revision-Date: 2012-10-22 07:33+0000\n"
-"Last-Translator: Nadir Teymurov <nadir_teymurov@mail.ru>\n"
+"PO-Revision-Date: 2013-01-10 12:50+0000\n"
+"Last-Translator: Emin Mastizadeh <emin25@ovi.com>\n"
 "Language-Team: Azerbaijani <az@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-10 04:35+0000\n"
+"X-Launchpad-Export-Date: 2013-01-11 04:34+0000\n"
 "X-Generator: Launchpad (build 16412)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -203,7 +203,7 @@ msgstr "Müvəqqəti işarə: %1"
 #: src/core/modules/StarWrapper.cpp:52 src/core/modules/StarWrapper.cpp:122
 #: src/translations.h:151
 msgid "star"
-msgstr ""
+msgstr "ulduz"
 
 #: src/core/modules/StarWrapper.cpp:57
 #, qt-format
@@ -217,7 +217,7 @@ msgstr "Görünən ulduz ölçüsü: <b>%1</b> (itmə ilə)"
 
 #: src/core/modules/StarWrapper.cpp:120
 msgid "double star"
-msgstr ""
+msgstr "qoşa ulduz"
 
 #: src/core/modules/StarWrapper.cpp:128 plugins/Quasars/src/Quasar.cpp:100
 #, qt-format
@@ -3214,7 +3214,7 @@ msgstr "Siyahılar"
 
 #: src/ui_viewDialog.h:1106
 msgid "View"
-msgstr "Baxım"
+msgstr "Göstər"
 
 #: src/ui_viewDialog.h:1112
 msgid "Sky"
