--- a/po/stellarium/de.po
+++ b/po/stellarium/de.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-09 18:40+0700\n"
-"PO-Revision-Date: 2013-01-05 19:03+0000\n"
+"PO-Revision-Date: 2013-01-10 21:07+0000\n"
 "Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-10 04:38+0000\n"
+"X-Launchpad-Export-Date: 2013-01-11 04:34+0000\n"
 "X-Generator: Launchpad (build 16412)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -219,7 +219,7 @@ msgstr "Scheinbare Helligkeit: <b>%1</b> (durch Extinktion)"
 
 #: src/core/modules/StarWrapper.cpp:120
 msgid "double star"
-msgstr ""
+msgstr "Doppelstern"
 
 #: src/core/modules/StarWrapper.cpp:128 plugins/Quasars/src/Quasar.cpp:100
 #, qt-format
@@ -1263,12 +1263,12 @@ msgstr "Asteroid"
 #. TRANSLATORS: Type of object
 #: src/translations.h:159
 msgid "moon"
-msgstr ""
+msgstr "Mond"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:161
 msgid "plutoid"
-msgstr ""
+msgstr "Plutoid"
 
 #: src/translations.h:165
 msgid "Arabic"
@@ -1414,7 +1414,7 @@ msgstr "Bedeckung von Erde und Jupiter, 2048"
 #. TRANSLATORS: Name of script
 #: src/translations.h:228
 msgid "3 Transits and 2 Eclipses from Deimos 2027"
-msgstr ""
+msgstr "3 Transits und 2 Finsternisse zu sehen von Deimos 2027"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:230
@@ -1535,6 +1535,11 @@ msgid ""
 "emerges from Mars it is still eclipsed and dimmed in Mars' shadow, only to "
 "light up later."
 msgstr ""
+"Phobos läuft Mars voraus und zieht vor der Sonne vorbei, kehrt um, verdeckt "
+"sie wieder teilweise (nur beobachtbar von der Deimos-Südhälfte), danach "
+"verfinstert Mars die Sonne total während Phobos durch den Marsschatten "
+"zwischen Mars und Deimos passiert. Beim Ende dieses Marstransits bleibt "
+"Phobos vom Marsschatten verfinstert, erst später wird er wieder sichtbar."
 
 #: src/translations.h:260
 msgid ""
@@ -4532,7 +4537,7 @@ msgstr "Internationale Bezeichnung"
 
 #: plugins/Satellites/src/Satellite.cpp:244
 msgid "artificial satellite"
-msgstr ""
+msgstr "Künstlicher Satellit"
 
 #. TRANSLATORS: Slant range: distance between the satellite and the observer
 #: plugins/Satellites/src/Satellite.cpp:254
