--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-09 18:40+0700\n"
-"PO-Revision-Date: 2013-01-06 19:43+0000\n"
+"PO-Revision-Date: 2013-01-10 13:21+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-10 04:41+0000\n"
+"X-Launchpad-Export-Date: 2013-01-11 04:34+0000\n"
 "X-Generator: Launchpad (build 16412)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
@@ -1411,7 +1411,7 @@ msgstr "Okkultasjon av jorden og Jupiter 2048"
 #. TRANSLATORS: Name of script
 #: src/translations.h:228
 msgid "3 Transits and 2 Eclipses from Deimos 2027"
-msgstr ""
+msgstr "3 transitter og 2 formørkelser fra Deimos 2027"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:230
@@ -1530,6 +1530,12 @@ msgid ""
 "emerges from Mars it is still eclipsed and dimmed in Mars' shadow, only to "
 "light up later."
 msgstr ""
+"Phobos farer foran Mars og går over solen, passerer den og går så tilbake "
+"mot solen og går bare delvis over den igjen (sees bare fra den sørlige "
+"halvkule på Deimos), så formørker Mars fullstendig solen mens Phobos "
+"passerer i mørket mellom Mars og Deimos. Når Phobos dukker opp fra Mars er "
+"den fremdeles formørket og nedtonet i Mars sin skygge, bare for å lyse opp "
+"senere."
 
 #: src/translations.h:260
 msgid ""
