Launchpad automatic translations update.

--- a/po/stellarium-skycultures/de.po
+++ b/po/stellarium-skycultures/de.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-02 16:21+0000\n"
+"PO-Revision-Date: 2013-01-13 15:33+0000\n"
 "Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-09 04:54+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-01-14 04:35+0000\n"
+"X-Generator: Launchpad (build 16420)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -460,7 +460,7 @@ msgstr "Atome für den Frieden -Galaxie"
 
 #: nebulae/default/ngc2000names.dat:245
 msgid "Grand Design galaxy"
-msgstr ""
+msgstr "Grand Design-Galaxie"
 
 #: nebulae/default/ngc2000names.dat:246
 msgid "Monkey Head nebula"
@@ -516,7 +516,7 @@ msgstr "Kühlturm"
 
 #: nebulae/default/ngc2000names.dat:259
 msgid "Crowbar galaxy"
-msgstr ""
+msgstr "Hockeyschläger-Galaxie"
 
 #: nebulae/default/ngc2000names.dat:260
 msgid "Sagittarius Star Cloud"
@@ -565,7 +565,7 @@ msgstr "Keenans System"
 
 #: nebulae/default/ngc2000names.dat:275
 msgid "Kidney Bean galaxy"
-msgstr ""
+msgstr "Bohnengalaxie"
 
 #: nebulae/default/ngc2000names.dat:276 nebulae/default/ngc2000names.dat:277
 #: nebulae/default/ngc2000names.dat:278
@@ -594,7 +594,7 @@ msgstr "Seyferts Sextett"
 
 #: nebulae/default/ngc2000names.dat:284
 msgid "Soul nebula"
-msgstr ""
+msgstr "Seelennebel"
 
 #: nebulae/default/ngc2000names.dat:285
 msgid "Southern Integral Sign"
@@ -610,7 +610,7 @@ msgstr "Superwind-Galaxie"
 
 #: nebulae/default/ngc2000names.dat:288
 msgid "Turtle planetary nebula"
-msgstr ""
+msgstr "Schildkröte"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
