--- a/po/stellarium-skycultures/de.po
+++ b/po/stellarium-skycultures/de.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-13 15:33+0000\n"
-"Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
+"PO-Revision-Date: 2013-01-16 12:17+0000\n"
+"Last-Translator: Hendrik Lippek <Unknown>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-14 04:35+0000\n"
-"X-Generator: Launchpad (build 16420)\n"
+"X-Launchpad-Export-Date: 2013-01-17 04:34+0000\n"
+"X-Generator: Launchpad (build 16430)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -380,7 +380,7 @@ msgstr "ρ Oph-Nebel"
 
 #: nebulae/default/ngc2000names.dat:225
 msgid "Rim nebula"
-msgstr ""
+msgstr "Offener Sternhaufen"
 
 #: nebulae/default/ngc2000names.dat:226
 msgid "Cat's Paw nebula"
@@ -420,7 +420,7 @@ msgstr "Flammen-Nebel"
 
 #: nebulae/default/ngc2000names.dat:235
 msgid "Satellite cluster"
-msgstr ""
+msgstr "Kugelsternhaufen"
 
 #: nebulae/default/ngc2000names.dat:236
 msgid "Thor's Helmet"
@@ -484,7 +484,7 @@ msgstr "Spirographen-Nebel"
 
 #: nebulae/default/ngc2000names.dat:251
 msgid "Spiral planetary nebula"
-msgstr ""
+msgstr "Spiralförmiger planetarer Nebel"
 
 #: nebulae/default/ngc2000names.dat:252
 msgid "20 Vulpeculae cluster"
@@ -557,7 +557,7 @@ msgstr "Loch im Haufen"
 
 #: nebulae/default/ngc2000names.dat:272
 msgid "Intergalactic Wanderer/Tramp"
-msgstr ""
+msgstr "Intergalaktischer Wanderer"
 
 #: nebulae/default/ngc2000names.dat:273 nebulae/default/ngc2000names.dat:274
 msgid "Keenan's System"
