--- a/po/stellarium/stellarium.pot
+++ b/po/stellarium/stellarium.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-01-18 10:07+0700\n"
+"POT-Creation-Date: 2013-01-18 22:30+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -6580,7 +6580,7 @@ msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:551
 #, qt-format
-msgid "Transit at %1 (%2 ago) at %3 deg."
+msgid "Culminates at %1 (%2 ago) at %3 deg."
 msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:592
