--- a/po/stellarium/fi.po
+++ b/po/stellarium/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2013-01-18 16:25+0000\n"
+"PO-Revision-Date: 2013-01-19 21:43+0000\n"
 "Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-19 04:42+0000\n"
+"X-Launchpad-Export-Date: 2013-01-20 04:34+0000\n"
 "X-Generator: Launchpad (build 16430)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -6952,7 +6952,7 @@ msgstr ""
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:152
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:232
 msgid "Horizon altitude:"
-msgstr "Horisnotin korkeus:"
+msgstr "Horisontin korkeus"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
